# deep-learning-package

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  Taskfile.yaml  main.py  pyproject.toml
config/models/: example.yaml
data/: memo.txt
models/: memo.txt
reports/: memo.txt
src/: agent.py
src/data/: data_processing.py  dataloader.py  dataset.py  make_dataloader.py
src/models/: rnn.py  vae.py
src/models/networks/: RNN.py  VAE.py
src/test/: closed_test.py  open_test.py
src/utils/: data_utils.py  model_builder.py  model_builder_config.py  path_manager.py  train_module.py
src/visualization/: visu_image.py  visu_joint.py  visu_latent.py  visu_loss.py
src/vizualization/: visu_joint.py  visu_latent.py
